# Lane-Detection

flo_base/: CMakeLists.txt  package.xml
flo_base/config/: base_params.yaml
flo_base/flo_base/: base_controller.py  keyboard_controller.py
flo_base/launch/: flo_base.launch.py
flo_base/src/: serial_port.cpp
lane detection/launch/: start.launch.py
lane detection/self_driving/: angle.txt  computer_vision_node.py  drive_BOT.py  traffic_signal.py  video_recorder.py
lane detection/self_driving/Detection/Lanes/: a_colour_segmentation.py
lane detection/self_driving/config/: config.py
